[package]
name = "mini-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
rodio = { version = "0.17.0", default-features = false, features = ["minimp3"]}

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true

[profile.release-strip]
inherits = "release"
strip = true
